--- a/assets/style.css
+++ b/assets/style.css
@@ -136,3 +136,24 @@ label {
         transform: translateY(0);
     }
  }
+
+
+#myTable {
+    border-collapse: collapse;
+    width: 100%;
+    border: 1px solid #ddd;
+  }
+
+#myTable th, #myTable td {
+    text-align: left;
+    border-right: 1px solid #ddd;
+    padding-left: 10px;
+ }
+
+#myTable tr {
+    border-bottom: 1px solid #ddd;
+  }
+
+#myTable tr.header, #myTable tr:hover {
+    background-color: #f1f1f1;
+  }
